# benchmarking

./: .gitignore  README.md  bench-status.sh  charts.py  charts_test.py  run-all.sh  run-on-ec2.sh  verify-local.sh
.github/ISSUE_TEMPLATE/: config-correction.yml
.github/workflows/: bench-rig.yml  bench-tests.yml  cf-pages.yml  pages.yml  render-charts.yml
gateways/: README.md  fetch-stars.mjs  stars.json  versions.env
gateways/agentgateway/: gateway.sh
gateways/aisix/: gateway.sh
gateways/apisix/: gateway.sh
gateways/arch/: gateway.sh
gateways/bifrost/: gateway.sh
gateways/busbar/: gateway.sh
gateways/busbar-main/: gateway.sh
gateways/envoy-ai/: gateway.sh
gateways/gomodel/: gateway.sh
gateways/gptrouter/: gateway.sh
gateways/helicone/: gateway.sh
gateways/kong/: gateway.sh
gateways/litellm-python/: gateway.sh
gateways/litellm-rust/: gateway.sh
gateways/one-api/: gateway.sh
gateways/portkey/: gateway.sh
governed/: run.sh
history/: append.py
lib/: harness.sh  promote_guard.py  promote_guard_test.py  publish_lock_test.sh  rig.sh  stream_measure.sh  stream_measure_test.sh  sweep.sh  sweep_bisect_test.sh  sweep_peak_test.sh
loadgen/: go.mod  ugen.go  ugen_test.go
matrix/: run.sh
memory/: README.md  run.sh
mock/: Cargo.toml
mock/src/: main.rs
perf/: run.sh  stdur.py
scaling/: README.md
scratch/: OVERNIGHT-GOAL-otb-solid.md  file-outreach.sh
site/: .gitignore  _redirects  app.js  check-consistency.mjs  gen-data.mjs  index.html  style.css  test.mjs
stream/: run.sh
streamcpu/: run.sh
xlate/: run.sh
(+119 files in other folders)
